tests/solidity-semantic-tests/out/errors/revert_conversion/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/revert_conversion.sol.C.approval_program() -> uint64:
main:
    txn ApplicationID
    bnz main_after_if_else@2
    pushbytes "x_length"
    pushint 0
    app_global_put
    pushint 1
    return

main_after_if_else@2:
    pushint 4096
    bzero
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    pushbytes 0x2d4970c7 // method "f()void"
    txna ApplicationArgs 0
    match main_f_route@4
    err

main_f_route@4:
    txn OnCompletion
    !
    txn ApplicationID
    &&
    assert
    b f


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/revert_conversion.sol.C.f[routing]() -> void:
f:
    pushbytes "x"
    box_get
    assert // box exists
    pushints 2 0
    extract3
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000007
    concat // on error: max array length exceeded
    pop
    err // E
